themes/inbeat/assets/scss/partials/_campaign-spend.scss
#ib_campaign-spend-calculator{
    background: #FFFFFF;
    border: 1px solid #DCDCDC;
    box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.1);
    padding: 96px;
    margin-bottom: 175px;
    box-sizing: border-box;
    @include breakpoint(md-down){
      padding: 24px;
      margin: 8px;
      .calculator-input-section{
        padding-right: 0;
      }
    }
    .calculator-input-section{
      padding-right: 64px;
      padding-left: 0;
      @include breakpoint(md-down){
        padding-right: 0;
      }
      .title{
        font-weight: 500;
        font-size: 30px;
        line-height: 36px;
        letter-spacing: -0.3px;
        color: #414141;
        padding-bottom: 16px;
        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
      }
    }
    .calculator-output{
        background: #F9F7F7;
        padding: 32px;
        @include breakpoint(md-down){
          margin-top: 24px;
          padding: 24px;
        }
        .calculation-field{
          display: flex;
          align-items: center;
          justify-content: space-between;
          padding: 24px 0px;
          border-bottom:1px solid rgba(0, 0, 0, 0.1);
          &:last-child{
            border-bottom: none;
            padding-bottom: 0;
          }
          .calculation-wrapper{
            display: flex;
            flex-direction: column;
            gap: 4px;
            text-align: right;
            .title{
              font-weight: 300;
              font-size: 14px;
              line-height: 22px;
              color: rgba(0, 0, 0, 0.9);
              opacity: 0.5;
            }
            .value{
              font-weight: 500;
              font-size: 24px;
              line-height: 18px;
              letter-spacing: -0.004em;
              color: #000000;
            }
          }
        }
        .estimate-reach-field{
          padding-top: 0;
          .calculation-wrapper{
            .title{
              font-weight: 300;
              font-size: 14px;
              line-height: 22px;
              color: rgba(0, 0, 0, 0.9);
              opacity: 0.5;
            }
            .value{
              font-weight: 500;
              font-size: 36px;
              line-height: 42px;
              color: #000000;
              @include breakpoint(md-down){
                font-size: 32px;
              }
            }
          }
        }
    }
  }
  .mockup_dropdown-wrapper{
    // min-width: 96px;
    .input-dropdown{
      padding: 0 12px;
      gap: 8px;
      width: 50px;
      a{
        // gap: 14px;
        font-weight: 500;
        font-size: 14px;
        line-height: 36px;
        color: rgba(0, 0, 0, 0.75);
      }
      background: #F0EBEB;
      border-left: none;
      border-radius: 0px 4px 4px 0px;
      border: 1px solid #F0EBEB;
    }
  }
  .input-dropdown-wrapper{
    .mockup-dropdown__dropdown-list{
      margin-top: 2.1rem !important;
    }
  }
  .influencer-type-dropdown{
   .input-dropdown{
    width: 65px;
    }
  }
  .input-dropdown-wrapper{
    display: flex;
    .ib-spend-input{
      border: 1px solid #F0EBEB;
      border-radius: 4px 0px 0px 4px;
      padding: 0px 12px;
      font-size: 14px;
      font-weight: 400;
      line-height: 24px;
      text-align: right;
      width: 50px;
      transition: $transition_default;
      color: #262626;
      cursor: pointer;
      @include breakpoint(md-down){
        width: 70px;
      }
      &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
        color: #C4C4C4;
      }
      
      &:-ms-input-placeholder { /* Internet Explorer 10-11 */
        color: #C4C4C4;
      }
      
      &::-ms-input-placeholder { /* Microsoft Edge */
        color: #C4C4C4;
      }
      &:hover{
        border-color: #787878;
        outline: none;
      }
      &:focus{
        border-color: black;
        outline: none;
      }
    }
  }
.range{

  }
  .sliderValue{
    position: relative;
    width: 100%;
  }
  .sliderValue span{
    position: absolute;
    top: 37px;
    width: 48px;
    // height: 19px;
    font-weight: 400;
    font-size: 12px;
    line-height: 15px;
    z-index: 2;
    color: #FFFFFF;
    background:#000000;;
    padding: 2px 4px;
    border-radius: 4px;
    text-align: center;
    transform: translateX(-50%) scale(0);
    transform-origin: top;
    transition: transform 0.3s ease-in-out;
  }
  .sliderValue span.show{
    transform: translateX(-50%) scale(1);
    color: #ffffff;
  }
  .sliderValue span:after{
      content: "";
      position: absolute;
      width: 0;
      height: 0;
      border-width: 10px;
      border-style: solid;
      border-color: transparent transparent #000000 transparent;
      top: -14px;
      left: 21px;
      z-index: -1;
  }
  .field{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    position: relative;
    
  }
  .field .value{
    position: absolute;
    font-size: 18px;
    color: #664AFF;
    font-weight: 600;
  }
  .field .value.left{
    left: -22px;
  }
  .field .value.right{
    right: -43px;
  }
  .range input{
    -webkit-appearance: none;
    width: 100%;
    height: 4px;
    background: #ddd;
    background: linear-gradient(to right, #000000 0%, #000000 0%, #ddd 0%, #ddd 100%);
    border-radius: 5px;
    outline: none;
    border: none;
    z-index: 7;
  }
  .range input::-webkit-slider-thumb{
    -webkit-appearance: none;
    width: 14px;
    height: 14px;
    border-radius: 50%;
    background: #FFFFFF;
    border: 4px solid #000000;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
    cursor: pointer;
    z-index: 99;
  }
  .range input::-moz-range-thumb{
    -webkit-appearance: none;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    background: #FFFFFF;
    border: 1px solid rgba(0, 0, 0, 0.1);
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
    cursor: pointer;
  }
  .range input::-moz-range-progress{
    background: #000000; //this progress background is only shown on Firefox
  }
.active-area{
  position: absolute;
  background: black;
  left: 0;
  height: 100%;
  border-radius: 5px;
  z-index: 8;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  // transition: $transition_default;
}
.slider-control-wrapper{
  margin-top: 24px;
  .controls-wrapper{
    padding-top: 16px;
    @include breakpoint(md-down){
      padding-top: 0;
    }
  }
}
.ib-spend-control-wrapper{
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 8px;
  margin: 0px 0 16px 0px;
  h5{
    font-weight: 400;
    font-size: 20px;
    line-height: 28px;
    color: #000000;
    flex: 1;
    margin: 0;
    @include breakpoint(md-down){
      font-size: 16px;
    }
  }
}
.post-story-count-controller{
  margin-top: 54px;
  background: #FFFFFF;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
  border: 1px solid #DCDCDC;
  border-radius: 1px;
  padding: 24px;
  .controller-wrapper{
    &:first-child{
      padding-bottom: 20px;
      border-bottom: 1px solid #DCDCDC;
    }
    &:last-child{
      padding-top: 20px;
    }
    .d-flex{
      display: flex;
      gap: 24px;
      align-items: center;
      justify-content: center;
    }
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 24px;
    span{
      font-weight: 400;
      font-size: 20px;
      line-height: 30px;
      margin: 0;
      color: #000000;
      @include breakpoint(md-down){
        font-size: 18px;
        line-height: 24px;
      }
    }
    .increament-decreament-wrapper{
      display: flex;
      gap: 16px;
      .btn{
        height: 35px;
        width: 35px;
        display: flex;
        align-items: center;
        justify-content: center;
        border-radius: 50%;
        background: #EDEDED;
        transition: $transition_default;
        cursor: pointer;
        &:hover{
          background: #D0D0D0;
        }
        &.--disabled{
          opacity: 0.5;
          cursor: not-allowed;
          &:hover{
            background:#EDEDED;
          }
        }
      }

    }
  }
}
.interval-wrapper{
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: space-between;
  margin-bottom: 6px;
  transition: $transition_default;
  opacity: 0;
  .interval{
    cursor: pointer;  
    font-weight: 400;
    font-size: 12px;
    line-height: 16px;
    letter-spacing: -0.008em;
    color: rgba(0, 0, 0, 0.5);
  }
  &.show{
    opacity: 1;
  }
}

// /*Chrome*/
// .range input[type='range'] {
//     overflow: hidden;
//     // width: 80px;
//     -webkit-appearance: none;
//     width: 100%;
//     height: 4px;
//     background: #ddd;
//     border-radius: 5px;
//     outline: none;
//     border: none;
//     z-index: 7;
//   }
  
//   .range input[type='range']::-webkit-slider-runnable-track {
//     height: 4px;
//     -webkit-appearance: none;
//     color: #000000;
//     // margin-top: -1px;
//   }
  
//   .range input[type='range']::-webkit-slider-thumb {
//     -webkit-appearance: none;
//     width: 12px;
//     height: 12px;
//     border-radius: 50%;
//     background: #FFFFFF;
//     border: 1px solid rgba(0, 0, 0, 0.1);
//     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
//     cursor: pointer;
//   }

// /** FF*/
// .range input[type="range"]::-moz-range-progress {
// background-color: #000000; 
// }
// .range input[type="range"]::-moz-range-track {  
// background-color: #ddd;
// }
// /* IE*/
// .range input[type="range"]::-ms-fill-lower {
// background-color: #000000; 
// }
// .range input[type="range"]::-ms-fill-upper {  
// background-color: #ddd;
// }

